Fix broken video on mobile by turning it off

--- a/src/stylesheets/components/_hero.scss
+++ b/src/stylesheets/components/_hero.scss
@@ -21,12 +21,18 @@
     left: -300%;
     width: 600%;
     height: 100%;
+    z-index: 1;
+    display: none;
+
+    @media (min-width: 576px) {
+      display: block;
+    }
 
     // When aspect ratio is wider
     @media (min-aspect-ratio: 16/9) {
       height: 300%;
       top: -100%;
-      width: 110%;
+      width: 150%;
       left: -5%;
     }
 
@@ -35,12 +41,12 @@
       height: 300%;
       top: -100%;
     }
-
+    
     @media (max-aspect-ratio: 11/9) {
       width: 600%;
       left: -200%;
     }
-
+    
     @media (max-aspect-ratio: 5/9) {
       width: 600%;
       left: -200%;
